boreal/tests/assets/invalid_files/parsing/expr_too_deep.yar
// [no libyara conformance]
// Disabled on libyara as there isn't a depth limit afaict
rule a {
    condition:
        a.b(a.b(a.b(a.b(a.b(a.b(a.b(a.b(a.b(a.b())))))))))
}
